# FilaVaga

./: .gitignore  README.md  config.json  filavaga.spec  pyproject.toml
.github/workflows/: ci.yml
context/: Implantation Flow Document - FilaVaga.md  Problem Discovery - FilaVaga.md  Quick Start - FilaVaga.md  Software Design Document - FilaVaga.md  Solution Architecture Document - FilaVaga.md  Task Manegment - FilaVaga.md
context/backlog/: TSK-01.md  TSK-02.md  TSK-03.md  TSK-04.md  TSK-05.md  TSK-06.md  TSK-07.md  TSK-08.md  TSK-09.md  TSK-10.md  TSK-11.md  TSK-12.md  TSK-13.md  TSK-14.md  TSK-15.md  TSK-16.md  TSK-17.md  TSK-18.md  TSK-19.md  TSK-20.md  TSK-21.md  TSK-22.md  TSK-23.md  TSK-24.md  TSK-25.md  TSK-26.md  TSK-27.md  TSK-28.md  TSK-29.md  TSK-30.md  TSK-31.md  TSK-32.md  TSK-33.md  TSK-34.md  TSK-35.md
filavaga/: __init__.py  main.py
filavaga/application/ports/: __init__.py  inbound.py  outbound.py
filavaga/application/services/: __init__.py  analytics_service.py  archive_service.py  config_wizard.py  csv_importer.py  match_engine.py  queue_manager.py
filavaga/core/: entities.py  exceptions.py  value_objects.py
filavaga/infra/: logger.py  translation.py
filavaga/infra/cli/: __init__.py  presenter.py  (+1 more)
filavaga/locales/: de.json  en.json  es.json  fr.json  pt.json
tests/: __init__.py  test_accessibility.py  test_analytics.py  test_archive.py  test_config_wizard.py  test_coverage_hardening.py  test_csv_importer.py  test_domain.py  test_i18n.py  test_infra.py  test_interactive.py  test_presenter_i18n.py  test_tui_overhaul.py  test_usecases.py
(+2 files in other folders)
