[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filavaga"
version = "1.1.0"
description = "Highly optimized local in-memory queue-management engine featuring high-precision FIFO queues."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kalyel N. Laurindo", email = "suporte@koyosstudios.com.br" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pyinstaller>=5.0.0",
]

[project.scripts]
filavaga = "filavaga.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
